--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,17 @@
         android:theme="@style/Theme.ClassMate"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.AddBookActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.SplashScreenActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Activities.ForgetPasswordActivity"
             android:exported="false" />
@@ -37,6 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".Activities.MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
+
 </manifest>
