--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,24 @@
         android:theme="@style/Theme.ClassMate"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.LabFilesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.PdfViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.ClassAssignmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.AddClassAssignment"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.AddLabFiles"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.AddClassNotesActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.AddUpdateActivity"
             android:exported="false" />
         <activity
