--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:theme="@style/Theme.ClassMate"
         tools:targetApi="31">
         <activity
+            android:name="com.sksinha2410.exploreease.Chatbot.MainActivity"
+            android:exported="false"
+            android:label="@string/classmate"
+            android:theme="@style/Theme.Geminichat" />
+        <activity
             android:name=".Activities.LabFilesActivity"
             android:exported="false" />
         <activity
@@ -44,7 +49,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
