--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.ClassMate"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.UpcomingActivity"
+            android:exported="false" />
+        <activity
             android:name="com.sksinha2410.exploreease.Chatbot.MainActivity"
             android:exported="false"
             android:label="@string/classmate"
@@ -49,6 +52,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
